Object ID parse finished

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(snmp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(snmp main.cpp parser.cpp parser.h structures.h ObjectId.cpp ObjectId.h)
+add_executable(snmp main.cpp parser.cpp parser.h structures.h ObjectId.cpp ObjectId.h ObjectType.cpp ObjectType.h DataType.cpp DataType.h)
